Fix word wrapping

--- a/src/components/Me/SubscriptionsPage.module.css
+++ b/src/components/Me/SubscriptionsPage.module.css
@@ -1,4 +1,8 @@
 .subscriptions {
+  td {
+    word-wrap: break-word;
+  }
+
   .m {
     width: 10%;
   }
